alignment fix

--- a/src/components/SERVICE AREAS/services.module.css
+++ b/src/components/SERVICE AREAS/services.module.css
@@ -7,28 +7,23 @@
   justify-content: center;
   width: 100%;
   position: relative;
-  padding-top: 80px;
-  /* margin-top: -40px; */
   padding: 0 20px;
+  margin-bottom: 30px;
 }
 .servicesContainer {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
-  grid-template-rows: repeat(4, 1fr);
+  grid-template-rows: repeat(2, 1fr);
   row-gap: 25px;
   column-gap: 15px;
+  column-gap: 50px;
 }
 
-/* @media (max-width: 768px) {
-  .servicesContainer {
-    grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: repeat(3, 1fr);
-  }
-} */
 @media (max-width: 700px) {
   .servicesContainer {
     grid-template-columns: repeat(2, 1fr);
     grid-template-rows: repeat(2, 1fr);
+    gap: 50px;
   }
 }
 .card {
